// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArrowBtn snapshots should render with default html 1`] = `
<button
  class="arrow-btn"
>
  <svg
    aria-hidden="true"
    viewBox="0 0 24 24"
  >
    <polygon
      points=""
    />
  </svg>
</button>
`;

exports[`ArrowBtn snapshots should render with nav-arrow-btn class 1`] = `
<button
  class="arrow-btn nav-arrow-btn"
>
  <svg
    aria-hidden="true"
    viewBox="0 0 24 24"
  >
    <polygon
      points=""
    />
  </svg>
</button>
`;
